"fix hover error on dark mode in createGIF btns"

--- a/css/footer_style.scss
+++ b/css/footer_style.scss
@@ -105,15 +105,20 @@ footer{
         }
     }
     .create-gifo{
-        .record-btns:hover{
-            background-color: transparent;
-        }
         button{
             color: #fff;
             border-color: #fff;
             &:hover{
                 background-color: #fff;
                 color: $dark_color_primary; 
+            }
+        }
+        .record-btns:hover{
+            button{
+                &:hover{
+                    background-color: transparent;
+
+                }
             }
         }
     }
